--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,20 @@
 {
-  "rewrites": [
+  "name": "eth-rental",
+  "version": 2,
+  "builds": [
     {
-      "source": "/((?!api/.*).*)",
-      "destination": "/index.html"
+      "src": "build/public/**",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "build/server.js",
+      "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    { "src": "/favicon.ico", "dest": "build/public/favicon.ico" },
+    { "src": "/robots.txt", "dest": "build/public/robots.txt" },
+    { "src": "/static/(.*)", "dest": "build/public/static/$1" },
+    { "src": "/(.*)", "dest": "build/server.js" }
   ]
 }
