--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "razzle build --noninteractive && cp vercel.json build",
     "build:copy": "cp -a ../build/. contract-build",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages-d build"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@ethersproject/constants": "^5.4.0",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "babel-preset-razzle": "4.0.4",
+    "babel-preset-razzle": "^4.2.17",
     "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -43,8 +43,8 @@
     "html-webpack-plugin": "^4.5.2",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "2.2.1",
-    "razzle": "^4.0.4",
-    "razzle-dev-utils": "^4.0.4",
+    "razzle": "^4.2.17",
+    "razzle-dev-utils": "^4.2.17",
     "typescript": "^4.4.3",
     "webpack": "^4.44.1",
     "webpack-dev-server": "^3.11.2"
