--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@openzeppelin/contracts": "^4.7.3",
     "@truffle/hdwallet-provider": "^1.7.0",
     "dotenv": "^10.0.0",
+    "gh-pages": "^4.0.0",
     "web3": "^1.8.0"
   }
 }
